# Transport_planning

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.fd419f9  README.md  addchauffeur.cpp  addchauffeur.h  addchauffeur.ui  addevent.cpp  addtournee.cpp  addtournee.h  addtournee.ui  display_chauffeurs.cpp  display_chauffeurs.h  display_chauffeurs.ui  displaycamions.cpp  displaycamions.ui  displaychauffeurs.cpp  displaychauffeurs.ui  displaytournee.cpp  displaytournee.h  displaytournee.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Transport_planning-mainKit-Debug/: CMakeCache.txt  Transport_planning  Transport_planning.cbp  cmake_install.cmake  main_database.db
build-Transport_planning-mainKit-Debug/.cmake/api/v1/reply/: cache-v2-ae25365719a5d8ad1caf.json  cmakeFiles-v1-55af9db307933a507734.json  cmakeFiles-v1-6dd225edb606f4c56bf5.json  codemodel-v2-926240bdfbaafd5e788b.json  codemodel-v2-9ca83eec06b409dd7176.json  codemodel-v2-ad679d4c8178691d90d0.json  index-2025-10-09T16-14-39-0902.json  index-2025-10-22T08-50-53-0890.json  index-2025-10-23T13-28-32-0017.json  target-Transport_planning-Debug-1e0ccbfaed1bbe453c62.json  target-Transport_planning-Debug-2ac785ae3038e7a736d7.json  (+2 more)
build-Transport_planning-mainKit-Debug/Transport_planning_autogen/: mocs_compilation.cpp
forms/: addcamion.ui  addchauffeur.ui  addclient.ui  addevent.ui  addtournee.ui  displaycamions.ui  displaychauffeurs.ui  displayclient.ui  displaytournee.ui  mainwindow.ui
headers/: addcamion.h  addchauffeur.h  addclient.h  addevent.h  addtournee.h  databasesingleton.h  displaycamions.h  displaychauffeurs.h  displayclient.h  displaytournee.h  mainwindow.h  nullrelationaldelegate.h
source/: addcamion.cpp  addchauffeur.cpp  addclient.cpp  addevent.cpp  addtournee.cpp  databasesingleton.cpp  displaycamions.cpp  displaychauffeurs.cpp  displayclient.cpp  displaytournee.cpp  main.cpp  mainwindow.cpp  nullrelationaldelegate.cpp
